--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -9,77 +9,47 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="~{layout/base :: head(~{::title}, ~{::link}, ~{})}">
   <title>Вход в систему</title>
-  <link rel="stylesheet" th:href="@{/css/styles.css}">
+  <link rel="stylesheet" th:href="@{/css/auth.css}">
 </head>
 <body>
-  <div th:replace="~{layout/page :: body(~{::#content}, ~{::#scripts})}">
-    <div id="content" class="auth-page">
-      <div class="auth-container">
-        <div class="auth-header">
-          <h1>Вход в систему</h1>
-          <p>Введите ваши данные для входа</p>
-        </div>
-
-        <div th:if="${error}" class="alert alert-danger">
-          <svg viewBox="0 0 24 24">
-            <path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/>
-          </svg>
-          <span th:text="${error}"></span>
-        </div>
-
-        <form th:action="@{/login}" method="post">
-          <div class="form-group">
-            <label class="form-label" for="username">Имя пользователя</label>
-            <input type="text" class="form-control" id="username" name="username" required>
-          </div>
-
-          <div class="form-group">
-            <label class="form-label" for="password">Пароль</label>
-            <div class="password-wrapper">
-              <input type="password" class="form-control" id="password" name="password" required>
-              <button type="button" class="password-toggle" id="togglePassword">
-                <svg width="16" height="16" viewBox="0 0 16 16">
-                  <path d="M8 2C3 2 0 8 0 8s3 6 8 6 8-6 8-6-3-6-8-6zm0 10c-2.33 0-4.32-2.73-5.6-4C3.7 6.73 5.67 4 8 4s4.3 2.73 5.6 4c-1.3 1.27-3.26 4-5.6 4zm0-7a3 3 0 100 6 3 3 0 000-6zm0 4.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3z" fill="currentColor"/>
-                </svg>
-              </button>
-            </div>
-          </div>
-
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="rememberMe" name="rememberMe">
-            <label class="form-check-label" for="rememberMe">Запомнить меня</label>
-          </div>
-
-          <button type="submit" class="btn btn-primary">Войти</button>
-
-          <div class="auth-footer">
-            <p><a th:href="@{/forgot-password}">Забыли пароль?</a></p>
-            <p>Нет аккаунта? <a th:href="@{/register}">Зарегистрироваться</a></p>
-          </div>
-        </form>
+  <div th:replace="~{fragments/header :: header}"></div>
+  <div id="content" class="auth-page">
+    <div class="auth-container">
+      <div class="auth-header">
+        <h1>Вход в систему</h1>
+        <p>Введите учетные данные для доступа</p>
       </div>
-    </div>
 
-    <div id="scripts">
-      <script th:inline="javascript">
-        document.addEventListener('DOMContentLoaded', function() {
-          const togglePassword = document.getElementById('togglePassword');
-          const passwordInput = document.getElementById('password');
+      <div th:if="${param.registered}" class="alert alert-success">
+        <svg viewBox="0 0 24 24">
+          <path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+        </svg>
+        <span>Регистрация прошла успешно! Теперь вы можете войти.</span>
+      </div>
 
-          togglePassword.addEventListener('click', function() {
-            const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
-            passwordInput.setAttribute('type', type);
+      <div th:if="${error}" class="alert alert-danger">
+        <svg viewBox="0 0 24 24">
+          <path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/>
+        </svg>
+        <span th:text="${error}">Ошибка входа</span>
+      </div>
 
-            // Изменение иконки
-            const svgPath = this.querySelector('path');
-            if (type === 'text') {
-              svgPath.setAttribute('d', 'M8 2C3 2 0 8 0 8s3 6 8 6 8-6 8-6-3-6-8-6zm0 10c-2.33 0-4.32-2.73-5.6-4C3.7 6.73 5.67 4 8 4s4.3 2.73 5.6 4c-1.3 1.27-3.26 4-5.6 4zm0-7a3 3 0 100 6 3 3 0 000-6zm0 4.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3z');
-            } else {
-              svgPath.setAttribute('d', 'M8 2C3 2 0 8 0 8s3 6 8 6 8-6 8-6-3-6-8-6zm0 10c-2.33 0-4.32-2.73-5.6-4C3.7 6.73 5.67 4 8 4s4.3 2.73 5.6 4c-1.3 1.27-3.26 4-5.6 4zm0-7a3 3 0 100 6 3 3 0 000-6zm0 4.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3z');
-            }
-          });
-        });
-      </script>
+      <form th:action="@{/login}" method="post" class="auth-form">
+        <div class="form-group">
+          <label for="username">Имя пользователя</label>
+          <input type="text" id="username" name="username" required autofocus>
+        </div>
+        <div class="form-group">
+          <label for="password">Пароль</label>
+          <input type="password" id="password" name="password" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Войти</button>
+      </form>
+
+      <div class="auth-footer">
+        <p>Нет аккаунта? <a th:href="@{/register}">Регистрация</a></p>
+        <p><a th:href="@{/forgot-password}">Забыли пароль?</a></p>
+      </div>
     </div>
   </div>
 </body>
