--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -8,46 +8,44 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="~{layout/base :: head(~{::title}, ~{::link}, ~{})}">
     <title>Регистрация</title>
-    <link rel="stylesheet" th:href="@{/css/styles.css}">
+    <link rel="stylesheet" th:href="@{/css/auth.css}">
 </head>
 <body>
-    <div th:replace="~{layout/base :: body(~{::#content}, ~{::#scripts})}">
-        <div id="content" class="auth-page">
-            <div class="auth-container">
-                <div class="auth-header">
-                    <h1>Регистрация</h1>
-                    <p>Создайте новый аккаунт</p>
-                </div>
+    <div th:replace="~{fragments/header :: header}"></div>
+    <div id="content" class="auth-page">
+        <div class="auth-container">
+            <div class="auth-header">
+                <h1>Регистрация</h1>
+                <p>Создайте новый аккаунт</p>
+            </div>
 
-                <div th:if="${error}" class="alert alert-danger">
-                    <svg viewBox="0 0 24 24">
-                        <path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/>
-                    </svg>
-                    <span th:text="${error}"></span>
-                </div>
+            <div th:if="${error}" class="alert alert-danger">
+                <svg viewBox="0 0 24 24">
+                    <path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/>
+                </svg>
+                <span th:text="${error}"></span>
+            </div>
 
-                <form th:action="@{/register}" method="post" class="auth-form">
-                    <div class="form-group">
-                        <label for="username">Имя пользователя</label>
-                        <input type="text" id="username" name="username" th:value="${user?.username}" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Пароль</label>
-                        <input type="password" id="password" name="password" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="confirmPassword">Подтвердите пароль</label>
-                        <input type="password" id="confirmPassword" name="confirmPassword" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
-                </form>
-
-                <div class="auth-footer">
-                    <p>Уже есть аккаунт? <a th:href="@{/login}">Войти</a></p>
+            <form th:action="@{/register}" method="post" class="auth-form">
+                <div class="form-group">
+                    <label for="username">Имя пользователя</label>
+                    <input type="text" id="username" name="username" th:value="${user?.username}" required>
                 </div>
+                <div class="form-group">
+                    <label for="password">Пароль</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <div class="form-group">
+                    <label for="confirmPassword">Подтвердите пароль</label>
+                    <input type="password" id="confirmPassword" name="confirmPassword" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
+            </form>
+
+            <div class="auth-footer">
+                <p>Уже есть аккаунт? <a th:href="@{/login}">Войти</a></p>
             </div>
         </div>
-        <div id="scripts"></div>
     </div>
 </body>
 </html>
